--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,7 @@ jobs:
   build_for_release:
     uses: ./.github/workflows/build.yml
     with:
-      build-configs: '"Debug", "Release"'
+      build-configs: '"Release"'
 
   release:
     runs-on: ubuntu-latest
